# honey3d

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Suzanne-tex.xcf  Suzanne.mtl  cel.fs  demo.c  demo.fs  demo.vs  design.md  honey_engine_demo  light.fs  light.vs  sphere-tex.xcf  sphere.mtl  temple-tex.xcf  temple.blend  temple.mtl
demo/: .honey.lua.swo  Camera.lua  Enum.lua  FPSCamera.lua  Matrix.lua  MeshInstance.lua  Node.lua  Primitives.lua  ScreenQuad.lua  Shader.lua  SignalManager.lua  SpatialShader.lua  Vec3.lua  Vector.lua  honey.lua  main.lua
demo/bouncing_ball/: ball.dae  fragment.fs  main.lua  mesh.lua  shader.lua
demo/fancy/: honey.lua  main.lua  suzanne.dae
demo/first_person/: camera.lua  height.fs  height.vs  heightmap.dae  main.lua  mesh.lua  shader.lua  texture.lua
demo/minimal/: main.lua
demo/vector/: common.lua  main.lua
doc/: Doxyfile  doxyfile
include/: asset_cache.h  camera.h  common.h  error.h  glad.h  honey.h  input.h  keycodes.txt  light.h  mesh.h  model.h  primitives.h  scene.h  shader.h  texture.h
libs/assimp/: CMakeLists.txt
libs/cairo-1.16.0/: CMakeLists.txt
libs/cairo-1.16.0/src/: CMakeLists.txt  sources.cmake
libs/cglm/: CMakeLists.txt
libs/honeysuckle/: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/honeysuckle/examples/argument_parsing/: argument_parsing.c
libs/honeysuckle/examples/table_creation/: table_creation.c
libs/honeysuckle/examples/table_processing/: table_processing.c
libs/honeysuckle/src/: honeysuckle.h  hs_create_table.c  hs_parse_args.c  hs_process_table.c  hs_pushstring.c  hs_throw_error.c  hs_traceback.c  hs_type_to_string.c
libs/honeysuckle/src/tests/: hs_create_table_tests.c  hs_parse_args_tests.c  hs_parse_overloaded_tests.c  hs_process_table_tests.c  hs_pushstring_tests.c  hs_tests.h  hs_throw_error_tests.c  hs_type_to_string_tests.c  tests_main.c
libs/lua-5.1.5/: CMakeLists.txt
libs/nanovg/: CMakeLists.txt
libs/ode-0.16.1/: CMakeLists.txt
libs/pixman-0.40.0/: CMakeLists.txt
libs/pixman-0.40.0/cmake/: arch_detect.cmake
src/: cairo_bindings.c  cairo_bindings.h  camera.c  cglm_bindings.c  cglm_bindings.h  common.h  error.c  glad.c  glm_bindings.c  glm_bindings.h  glm_mat3_bindings.c  glm_mat4_bindings.c  glm_vec3_bindings.c  glm_vec4_bindings.c  honey.c  honey.h  honey_lua.c  honey_setup.c  input.c  input.h  light.c  main.c  mesh.c  mesh.h  model.c  modules.h  primitives.c  primitives.h  run_callbacks.c  scene_tree.h  scene_tree_node.c  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/audio/: CMakeLists.txt  audio.c  audio.h  bind  bind.bind  engine.c  impl.c  setup.c  sound.c  sound_group.c
src/camera/: camera.h
src/error/: error.c
src/gl/: CMakeLists.txt  data.c  data.test.c  drawing.c  gl.c  gl.h  gl.test.c  honey_gl.c  honey_gl.h  honey_gl.test.c  honey_window.c  notes.md  shader.c  texture.c  window.c  window.test.c
src/gl/glad/: CMakeLists.txt  glad.c  glad.h  khrplatform.h
src/gl/glad/include/glad/: glad.h
src/gl/glad/src/: glad.c
src/glm/: CMakeLists.txt  affine2d.c  affine3d.c  camera.c  glm.c  glm.h  mat2.c  mat3.c  mat4.c  quaternion.c  setup.c  transform.c  vec2.c  vec3.c  vec4.c
src/image/: CMakeLists.txt  image.c  image.h
src/import/: CMakeLists.txt  import.c  import.h  import.test.c  import.test.h  import_mesh.test.c  import_node.test.c  import_scene.test.c  notes.md
src/input/: .#input.h  input.c  input.h
src/light/: light.c  light.h
src/logging/: .logging.h.swp  CMakeLists.txt  logging.c  logging.h  logging.test.c
src/lua/: honey_lua.c  honey_lua.h
src/mesh/: mesh.c  mesh.h
src/model/: model.c  model.h
src/nvg/: CMakeLists.txt  color.c  composite.c  context.c  frame.c  image.c  nvg.h  paint.c  path.c  render.c  scissor.c  setup.c  state.c  text.c  transform.c
src/ode/: CMakeLists.txt  body.c  geom.c  joint.c  ode_bindings.c  ode_bindings.h  setup.c  world.c
src/options/: CMakeLists.txt  honey_options.c  honey_options.h  options.c  options.h
src/primitives/: primitives.c  primitives.h
src/shader/: shader.c  shader.h
src/test/: CMakeLists.txt  honey-test.c  honey-test.h  lily-test.c  lily-test.h  minunit.h  mock_queue.c  mock_queue.h  mock_queue_tests.c  suites.h  test_main.c
src/test/logging/: logging_tests.c
src/test/mock/: mock_GLFW.c  mock_GLFW.h
src/texture/: texture.c  texture.h
src/util/: CMakeLists.txt  util.c  util.h  util.test.c
src/vector/: CMakeLists.txt  vector.c  vector.h
src/window/: window.c  window.h
util/: bind.lua  generate-binding.lua  test.lua
